Home Page Improvements
* Added displaying Last Boot Time to the home page.

* Added displaying System Manufacturer and Model to the home page.

* Added displaying Open Network Ports counts to the home page. It displays both TCP and UDP ports counts that are currently open on the system. It is updated every 4 seconds and just like other real-time info on the Home page, it will not run in the background when you navigate away from the Home page, so it won't use any unnecessary system resources.

* Added the ability to change Computer Name in the home page. The Computer Name tile is now clickable and when you press it, you will be able to set a new Computer Name. This feature will only be available when you run the app as Administrator and after changing the Computer Name, a system restart will be required for the changes to take effect.

* Added displaying the names of all of the available GPUs on the system to the home page. The GPU tile is clickable so if you click on it, a new area will open displaying the full technical details of every GPU on the system.

* The information titles on the Home page now have proper rounded corners.

* Reduced the amount of empty spaces in the Home page.

* The system time and time zone now display in the same tile on the Home page.

* Added displaying the currently active Power Plan's name on the Home page.

* Added displaying the real time SSD Temperature on the Home page. It is updated every 2 seconds and just like other real-time info on the Home page, it will not run in the background when you navigate away from the Home page, so it won't use any unnecessary system resources.

* Finalized implementing the French language for the both apps. Thanks @AnthonyMahe for the contributions! [1](https://github.com/HotCakeX/Harden-Windows-Security/pull/965) and [2](https://github.com/HotCakeX/Harden-Windows-Security/pull/963)

--- a/AppControl Manager/Strings/en-US/Resources.resw
+++ b/AppControl Manager/Strings/en-US/Resources.resw
@@ -6146,9 +6146,6 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   <data name="SystemTime.Text" xml:space="preserve">
     <value>System Time</value>
   </data>
-  <data name="TimeZone.Text" xml:space="preserve">
-    <value>Time Zone</value>
-  </data>
   <data name="User.Text" xml:space="preserve">
     <value>User</value>
   </data>
@@ -6319,5 +6316,45 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   </data>
   <data name="ConvertXMLToBinarySettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>Browse for XML policy file(s) to convert to CIP binary file(s)</value>
+  </data>
+  <!--NEW-->
+  <data name="LastBootTime.Text" xml:space="preserve">
+    <value>Last Boot Time</value>
+  </data>
+  <data name="SystemModel.Text" xml:space="preserve">
+    <value>System Model</value>
+  </data>
+  <data name="OpenNetworkPorts.Text" xml:space="preserve">
+    <value>Open Network Ports</value>
+  </data>
+  <data name="EnterNewName" xml:space="preserve">
+    <value>Enter a new name</value>
+  </data>
+  <data name="NewComputerName" xml:space="preserve">
+    <value>New Computer Name</value>
+  </data>
+  <data name="NeedAdminToRenamePCMsg" xml:space="preserve">
+    <value>You must run this application as an Administrator to rename the computer.</value>
+  </data>
+  <data name="EnterANameForThisPCMsg" xml:space="preserve">
+    <value>Enter a new name for this computer. A restart will be required for changes to take effect.</value>
+  </data>
+  <data name="RenameComputer" xml:space="preserve">
+    <value>Rename Computer</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
+  <data name="SuccessfullyRenamedPCTo" xml:space="preserve">
+    <value>The computer name has been set to '{0}'. You must restart your computer for the changes to take full effect.</value>
+  </data>
+  <data name="FailedToRenamePCError" xml:space="preserve">
+    <value>Failed to set computer name. Error code: {0}</value>
+  </data>
+  <data name="GPUDetails" xml:space="preserve">
+    <value>GPU Details</value>
+  </data>
+  <data name="PowerPlan.Text" xml:space="preserve">
+    <value>Power Plan</value>
   </data>
 </root>
