--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -5,3 +5,5 @@
 * Improved UI texts in the Deployment page to enhance clarity, fixes this issue: https://github.com/HotCakeX/Harden-Windows-Security/issues/958
 
 * In the MDE Advanced Hunting and Event Log Policy Creation pages, the Date filter is now always applied when it is set; That means the data will be consistently filtered based on Date when you sort the data, search through the data or reload new data, without requiring you to reapply the Date filter each time. This improves UX and addresses this issue: https://github.com/HotCakeX/Harden-Windows-Security/discussions/956
+
+* Added showing last boot time on the Home page.
